--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,19 @@
         "xmemory": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "ios": "cpp",
+        "iterator": "cpp",
+        "random": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp",
+        "system_error": "cpp",
+        "xfacet": "cpp",
+        "xiosbase": "cpp",
+        "xlocale": "cpp",
+        "xlocinfo": "cpp",
+        "xlocnum": "cpp"
     }
 }
