--- a/Game/.vscode/settings.json
+++ b/Game/.vscode/settings.json
@@ -53,6 +53,7 @@
         "xlocmes": "cpp",
         "xlocmon": "cpp",
         "xloctime": "cpp",
-        "*.m": "cpp"
+        "*.m": "cpp",
+        "sstream": "cpp"
     }
 }
