--- a/Game/.vscode/settings.json
+++ b/Game/.vscode/settings.json
@@ -54,7 +54,9 @@
         "xlocmon": "cpp",
         "xloctime": "cpp",
         "*.m": "cpp",
-        "sstream": "cpp"
+        "sstream": "cpp",
+        "regex": "cpp",
+        "__locale": "cpp"
     },
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "enabled"
 }
